--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,16 @@ button {
   padding: 12px 28px;
 }
 
+.sidenav {
+height: 100%;
+width: 160px;
+position: fixed;
+z-index: 1;
+top: 0;
+left:0;
+padding-top: 200px;
+}
+
 body
 {
 background-color: #cde0de;
